Fixed bottom padding on bio

--- a/CSS/bio_styles.css
+++ b/CSS/bio_styles.css
@@ -47,4 +47,6 @@ body {
     padding: 1% 18%;
     font-family: "Bell MT","Helvetica","Adobe Caslon Pro Bold",serif;
     font-size: 20px;
+    padding-bottom: 10%;
 }
+
