--- a/CSS/bio_styles.css
+++ b/CSS/bio_styles.css
@@ -1,7 +1,7 @@
 /* CSS DOCUMENT */
 
 body {
-    background-image: url("Bio_bg3.jpg");
+    background-image: url("../Images/Bio_bg3.jpg");
     background-repeat: repeat;
 }
 
